Fix mobile wrapping

--- a/components/Family/MiddlePanel.module.scss
+++ b/components/Family/MiddlePanel.module.scss
@@ -31,15 +31,19 @@
             margin-bottom: 20px;
             box-shadow: 0px 2px 5px var(--color-shadow);
 
-            .userAvatar {
-                font-size: 0.9rem;
-                display: flex;
-                align-items: center;
+            .messageUser {
+                flex: 9999;
 
-                .userPhoto {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 8px;
+                .userAvatar {
+                    font-size: 0.9rem;
+                    display: flex;
+                    align-items: center;
+
+                    .userPhoto {
+                        width: 30px;
+                        height: 30px;
+                        margin-right: 8px;
+                    }
                 }
             }
 
@@ -47,11 +51,19 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                flex-wrap: wrap;
 
                 .messageMeta {
                     color: var(--color-text-light);
                     display: flex;
+                    justify-content: space-between;
                     align-items: center;
+                    white-space: nowrap;
+                    flex: 1;
+
+                    @media only screen and (max-width: v.$bp-mobile) {
+                        font-size: 0.8rem;
+                    }
 
                     .menuButton {
                         background-color: transparent;
