--- a/components/Family/PanelStickyHeader.module.scss
+++ b/components/Family/PanelStickyHeader.module.scss
@@ -24,6 +24,7 @@
             padding-right: 5px;
             font-size: 0;
             margin-left: 10px;
+            white-space: nowrap;
 
             & > svg + svg {
                 margin-left: 5px;
