--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,3 @@
 $bp-tablet: 768px;
+$bp-mobile: 480px;
 $top-margin: 100px;
